# DataBase

./: Mysql结构图.drawio  README.md
Libmysqlclient/: main.cpp
Libmysqlclient/Demo/: CMakeLists.txt  README.md  main.cpp
Libmysqlclient/Demo/NetWork/: Client.cpp  README.md  Server.cpp
Libmysqlclient/Demo/NetWork/Facilities/: Address.hpp  Client_Data.hpp  Epoll.hpp  Log.hpp  Message.hpp  Socket.hpp  Timer.hpp
Libmysqlclient/Demo/SQL/: Class.sql  student.sql
Libmysqlclient/Demo/Source/: Database.hpp  Globlas Variables.hpp  Log.hpp  SQL.hpp
Libmysqlclient/Demo/Source/Tables/: Table.hpp  Table_Math.hpp  Table_Student.hpp
Mysql/: GIS.sql
ORM/: Show.py
ORM/FastAPI/: Request_Body.py  Server_Instance.py  Url_Parameters.py  Url_Request.py
ORM/SQLAdmin_Python/: III_获取每行各字段值的不同方式.py  IV_i_MetaData_ORM_DeclarativeBase.py  IV_ii_MetaData_Core_Table.py  VII_ORM相关的对象关系.py  V_数据操作_Insert.py  V_数据操作_Select.py  class.py  main.py
Oracle/大作业实践/: Employee_Manage.sql  Management System.cdm  README.md  大作业报告.doc  工作空间.sws
SQLAdmin/: Invoke_Python.cpp  main.py
SQLAdmin/FastAPI/: Extra_DataType.py  Request_Body.py  Response.py  Server_Instance.py  Url_Parameters.py  Url_Request.py  View.py
SQLAdmin/SQLAlchemy/: Create_Table.py  Delete_Table.py  II_两种执行方式(Connection和Session).py  IV_MetaData.py  I_Engine连接数据库.py  (+5 more)
SQLite/: Sqlite.hpp  columns_data_access.c  demo.c  foods.sqlite  main.cpp  parameters.c  prepare_select.c  select.cpp  test.sqlite
建模/: Customer_Manage.sql  DataBase.sql  Management System.cdb  Management System.pdm  Product_manage.sql  TableSpace.sql  test.sql
(+20 files in other folders)
